dev-scando-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-scando-admin
  labels:
    app: dev-scando-admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-scando-admin
  template:
    metadata:
      labels:
        app: dev-scando-admin
    spec:
      containers:
      - name: dev-scando-admin
        image: 744012312434.dkr.ecr.ap-south-1.amazonaws.com/dev-scando-admin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: dev-scando-admin
spec:
  selector:
    app: dev-scando-admin
  ports:
    - protocol: TCP
      port: 8083
