dev-scando-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-scando-main
  labels:
    app: dev-scando-main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-scando-main
  template:
    metadata:
      labels:
        app: dev-scando-main
    spec:
      containers:
      - name: dev-scando-main
        image: 744012312434.dkr.ecr.ap-south-1.amazonaws.com/dev-scando-main:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: dev-scando-main
spec:
  selector:
    app: dev-scando-main
  ports:
    - protocol: TCP
      port: 8080
