dev-scando-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-scando-notification
  labels:
    app: dev-scando-notification
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-scando-notification
  template:
    metadata:
      labels:
        app: dev-scando-notification
    spec:
      containers:
      - name: dev-scando-notification
        image: 744012312434.dkr.ecr.ap-south-1.amazonaws.com/dev-scando-notification:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: dev-scando-notification
spec:
  selector:
    app: dev-scando-notification
  ports:
    - protocol: TCP
      port: 8082
