ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scando-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-scando-web
            port:
              number: 80
